# ClimatePredict

./: Datasets.md  README.md  RUN.md
IntroductionToComputationalPhysics/: N_Ways_of_Measuring_PI.ipynb
Project/: Cargo.toml  notes.txt
Project/data/: chicago-temps.csv  emission_temp_data.csv  global-temperature.csv  temp.txt
Project/misc/: deleted_code.txt
Project/src/: Cargo.toml  linear_regression.rs  main.rs  model.rs  polynomial_regression.rs  random_forest.rs  test.rs
Project/ui/: script.js  style.css
Rocket/: Cargo.toml
Rocket/src/: handle.rs  rocket.rs
Rocket/ui/: index.html
