[package]
name = "candle-nn"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.32.5"
candle = { version = "0.4.1", package = "candle-core" }
candle-nn = { version = "0.4.1" }
tqdm = "0.7.0"
rustacuda = "0.1"
rustacuda_core = "0.1"
csv = "1.1"
plotpy = "0.6.1"
plotters = "0.3"
rand = "0.8"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
smartcore = "0.3.2"

[[bin]]
name = "lin"
path = "src/linear_regression.rs"

[[bin]]
name = "model"
path = "src/model.rs"

[[bin]]
name = "poly"
path = "src/polynomial_regression.rs"

[[bin]]
name = "rf"
path = "src/random_forest.rs"

[profile.dev.package."*"]
opt-level = 3

[features]
cuda = ["candle/cuda"]
